# mycelium-sdk-py

./: .cz.toml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  ci.yml  release.yml
src/myc_http_tools/functions/: __init__.py  compress_and_encode_profile_to_base64.py  decode_and_decompress_profile_from_base64.py
src/myc_http_tools/models/: licensed_resources.py  owner.py  profile.py  tenants_ownership.py
src/tests/: test_contract_shared_fixture.py  test_profile.py  test_profile_contract.py  test_profile_parity.py
src/tests/mock/: cross_go_encoded.b64
